--- a/views/main.jade
+++ b/views/main.jade
@@ -25,6 +25,29 @@ html(lang='en')
           script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
           script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     body
+        #login
+            .container
+                .row
+                    .col-md-4.col-md-offset-4
+                        .login-panel.panel.panel-default
+                            .panel-heading
+                                h3.panel-title Please Sign In
+                            .panel-body
+                                form(role='form')
+                                    fieldset
+                                        .form-group
+                                            input.form-control(placeholder='E-mail', name='username', type='email', autofocus='')
+                                        .form-group
+                                            input.form-control(placeholder='Password', name='password', type='password', value='')
+                                        .form-group
+                                            p#loginErrorpanel.wrap.alert.alert-danger(role='alert',style="display:none") Lorem ipsum TOKEN
+                                        //.checkbox
+                                        //    label
+                                        //        input(name='remember', type='checkbox', value='Remember Me')
+                                        //        | Remember Me
+                                        // Change this to a button or input when using this as a form
+                                        a.btn.btn-lg.btn-success.btn-block(href="javascript:login('" + myUrl + "','" + myToken + "');") Login
+        // /#login
         #wrapper
             // Navigation
             nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
@@ -94,6 +117,7 @@ html(lang='en')
                                                                         tr
                                                                             th(style="display:none") Id
                                                                             th Name
+                                                                            th Super
                                                                             th Manage
                                                                     tbody#tableusertype
                                                                         tr
@@ -119,6 +143,7 @@ html(lang='en')
                                                                         tr
                                                                             th(style="display:none") Id
                                                                             th Name
+                                                                            th Super
                                                                             th Manage
                                                                     tbody#tableapptype
                                                                         tr
@@ -151,14 +176,18 @@ html(lang='en')
                                                                                 label Token Type
                                                                             .col-lg-9
                                                                                 .row
-                                                                                    .col-xs-4
+                                                                                    .col-xs-3
                                                                                         label.radio-inline
                                                                                             input#optionsRadiosInline1(type='radio', name='optionsRadiosInline', value='user', checked='')
                                                                                             | User
-                                                                                    .col-xs-5
+                                                                                    .col-xs-3
                                                                                         label.radio-inline
                                                                                             input#optionsRadiosInline2(type='radio', name='optionsRadiosInline', value='app')
                                                                                             | App
+                                                                                    .col-xs-3
+                                                                                        label.checkbox-inline
+                                                                                            input#optionschecksuper(type='checkbox', name='checkboxInline', value='super')
+                                                                                            | Super
 
                                                         .row
                                                             .col-lg-6
@@ -484,6 +513,8 @@ html(lang='en')
                                 |   &nbsp;Copy to clipboard
             // /#page-wrapper
         // /#wrapper
+
+
         // jQuery
         script(src='bootstrapTemplate/bower_components/jquery/dist/jquery.min.js')
         // Bootstrap Core JavaScript
@@ -510,6 +541,9 @@ html(lang='en')
 
         script.
             msDetails('#{myUrl}','#{myToken}' ,"authms");
+
+        script.
+            getToken();
 
         script.
             $('[data-toggle=confirmation]').confirmation({singleton: true , placement: 'left', popout: true});
