--- a/views/main.jade
+++ b/views/main.jade
@@ -25,7 +25,7 @@ html(lang='en')
           script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
           script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     body
-        #login
+        #login(style="display:none")
             .container
                 .row
                     .col-md-4.col-md-offset-4
@@ -48,7 +48,7 @@ html(lang='en')
                                         // Change this to a button or input when using this as a form
                                         a.btn.btn-lg.btn-success.btn-block(href="javascript:login('" + myUrl + "','" + myToken + "');") Login
         // /#login
-        #wrapper
+        #wrapper(style="display:none")
             // Navigation
             nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
                 .navbar-header
@@ -76,7 +76,7 @@ html(lang='en')
                                     |  Settings
                             li.divider
                             li
-                                a(href='login.html')
+                                a(href='javascript:logout();')
                                     i.fa.fa-sign-out.fa-fw
                                     |  Logout
                         // /.dropdown-user
