--- a/views/main.jade
+++ b/views/main.jade
@@ -25,30 +25,30 @@ html(lang='en')
           script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
           script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     body
-        #login(style="display:none")
-            .container
-                .row
-                    .col-md-4.col-md-offset-4
-                        .login-panel.panel.panel-default
-                            .panel-heading
-                                h3.panel-title Please Sign In
-                            .panel-body
-                                form(role='form')
-                                    fieldset
-                                        .form-group
-                                            input.form-control(placeholder='E-mail', name='username', type='email', autofocus='')
-                                        .form-group
-                                            input.form-control(placeholder='Password', name='password', type='password', value='')
-                                        .form-group
-                                            p#loginErrorpanel.wrap.alert.alert-danger(role='alert',style="display:none") Lorem ipsum TOKEN
-                                        //.checkbox
-                                        //    label
-                                        //        input(name='remember', type='checkbox', value='Remember Me')
-                                        //        | Remember Me
-                                        // Change this to a button or input when using this as a form
-                                        a.btn.btn-lg.btn-success.btn-block(href="javascript:login('" + myUrl + "','" + myToken + "');") Login
-        // /#login
-        #wrapper(style="display:none")
+        //#login(style="display:none")
+        //    .container
+        //        .row
+        //            .col-md-4.col-md-offset-4
+        //                .login-panel.panel.panel-default
+        //                    .panel-heading
+        //                        h3.panel-title Please Sign In
+        //                    .panel-body
+        //                        form(role='form')
+        //                            fieldset
+        //                                .form-group
+        //                                    input.form-control(placeholder='E-mail', name='username', type='email', autofocus='')
+        //                                .form-group
+        //                                    input.form-control(placeholder='Password', name='password', type='password', value='')
+        //                                .form-group
+        //                                    p#loginErrorpanel.wrap.alert.alert-danger(role='alert',style="display:none") Lorem ipsum TOKEN
+        //                                //.checkbox
+        //                                //    label
+        //                                //        input(name='remember', type='checkbox', value='Remember Me')
+        //                        //        | Remember Me
+        //                                // Change this to a button or input when using this as a form
+        //                                a.btn.btn-lg.btn-success.btn-block(href="javascript:login('" + myUrl + "','" + myToken + "');") Login
+        //// /#login
+        #wrapper
             // Navigation
             nav.navbar.navbar-default.navbar-static-top(role='navigation', style='margin-bottom: 0')
                 .navbar-header
@@ -76,7 +76,16 @@ html(lang='en')
                                     |  Settings
                             li.divider
                             li
-                                a(href='javascript:logout();')
+                                //form(role='form', method="post")
+                                //    fieldset
+                                //        button.fa.fa-sign-out.fa-fw(type="submit") Logout
+
+                                //form(role='form', method="post" , action="logout")#logout
+                                //    fieldset
+                                //    a(href="javascript:;" , onclick="document.getElementById('logout').submit();")
+                                //        i.fa.fa-sign-out.fa-fw
+                                //        |  Logout    |  Logout
+                                a(href="javascript:logout('" + myUrl + "');")
                                     i.fa.fa-sign-out.fa-fw
                                     |  Logout
                         // /.dropdown-user
@@ -542,8 +551,8 @@ html(lang='en')
         script.
             msDetails('#{myUrl}','#{myToken}' ,"authms");
 
-        script.
-            getToken();
+        //script.
+        //    getToken();
 
         script.
             $('[data-toggle=confirmation]').confirmation({singleton: true , placement: 'left', popout: true});
