--- a/views/login.jade
+++ b/views/login.jade
@@ -65,8 +65,8 @@ html(lang='en')
         // Custom Theme JavaScript
         script(src='bootstrapTemplate/dist/js/sb-admin-2.js')
         // port2020 script
-        script(src="/utility/utility.js")
-        script(src="/utility/bootstrap-confirmation.js")
+        script(src="utility/utility.js")
+        script(src="utility/bootstrap-confirmation.js")
         //copy to clipboard script
         script(src="node_modules/clipboard/dist/clipboard.min.js")
 
