--- a/views/start.jade
+++ b/views/start.jade
@@ -38,9 +38,9 @@ html(lang='en')
         // Custom Theme JavaScript
         script(src='bootstrapTemplate/dist/js/sb-admin-2.js')
         // port2020 script
-        script(src="/utility/utility.js")
+        script(src="utility/utility.js")
 
-        script(src="/utility/bootstrap-confirmation.js")
+        script(src="utility/bootstrap-confirmation.js")
         //copy to clipboard script
         script(src="node_modules/clipboard/dist/clipboard.min.js")
 
@@ -51,13 +51,13 @@ html(lang='en')
                 var sessiontoken=sessionStorage.getItem("sessiontoken");
                 var url;
                 if(sessiontoken){
-                    url="/main";
+                    url="main";
                 }else{
                     if (read == "Yes") {
                         sessionStorage.setItem("sessiontoken","Ok")
-                        url="/main";
+                        url="main";
                     } else {
-                        url="/login";
+                        url="login";
                     }
                 }
 
