--- a/views/main.jade
+++ b/views/main.jade
@@ -259,7 +259,7 @@ html(lang='en')
                                                             li
                                                                 a(href="javascript:exportEnvironmentConfig('" + myUrl + "','" + myToken + "');") Export Architecture
                                                             li#importarchitecture
-                                                                a(href="javascript:loadMicroserviceList('" + myUrl + "','" + myToken + "');") Import Architecture
+                                                                a(href="javascript:loadEnviromnmentSetting('" + myUrl + "','" + myToken + "');") Import Architecture
 
                                         // TODO OLD .col-xs-9.text-right
                                         .col-xs-7.text-right
