--- a/views/main.jade
+++ b/views/main.jade
@@ -17,7 +17,7 @@ html(lang='en')
         link(href='bootstrapTemplate/dist/css/sb-admin-2.css', rel='stylesheet')
         // Custom Fonts
         link(href='bootstrapTemplate/bower_components/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
-        // PORT 20202 CSS
+        // CMC CSS
         link(href='stylesheets/port.css', rel='stylesheet')
         // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
         // WARNING: Respond.js doesn't work if you view the page via file://
@@ -57,7 +57,7 @@ html(lang='en')
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href='index.html') Cagliari Port 2020 Microservice Admin
+                    a.navbar-brand(href='index.html') CMC Microservice Admin
                 // /.navbar-header
                 ul.nav.navbar-top-links.navbar-right
                     // /.dropdown
@@ -585,7 +585,7 @@ html(lang='en')
         script(src='bootstrapTemplate/bower_components/metisMenu/dist/metisMenu.min.js')
         // Custom Theme JavaScript
         script(src='bootstrapTemplate/dist/js/sb-admin-2.js')
-        // port2020 script
+        // CMC script
         script(src="utility/utility.js")
         script(src="utility/FileSaver.js")
         script(src="utility/bootstrap-confirmation.js")
