update configure ui
- now click on "view details" point to details anchor
- now it's possible to copy text of configuration machine from details segment

--- a/views/main.jade
+++ b/views/main.jade
@@ -333,7 +333,7 @@ html(lang='en')
                                                                 |   &nbsp;Copy to clipboard
 
 
-                                a(href="javascript:msDetails('"+ myUrl + "','" + myToken + "','" + item['name'] +"');")
+                                a(href="#msdetails" onclick="javascript:msDetails('"+ myUrl + "','" + myToken + "','" + item['name'] +"');")
                                     .panel-footer
                                         span.pull-left View Details
                                         span.pull-right
